# segmenter

./: .gitattributes  .gitignore  pyproject.toml  readme.md  setup.cfg
.github/workflows/: main.yml  publish_to_pypi.yml
src/segmenter/: __init__.py
src/segmenter/_HS_lite/: homogeneous_segmentation.py  shs.py
src/segmenter/_util/: by_category.py  check_monotonically_increasing_segments.py  check_segmentation.py  cross_sections.py  fetch_road_network_info.py  iterate_over_cross_sections.py  linspace_steps.py  split_rows_by_category_to_max_measure_length.py  split_rows_by_segmentation.py
src/segmenter/_util/cross_sections/: Addable.py  ImmutableTree.py  Transition.py  cross_sections.py
test/: generate_df2.ipynb  manual_edgey_tests.ipynb  manual_testing_fetch_info.ipynb  manual_testing_segment.ipynb  setup_tests_00_generate_df2.ipynb  setup_tests_01_R_version_outputs.ipynb  test_check_linear_index.py  test_check_monotonically_increasing_segments.py  test_cross_sections.py  test_cumq.py  test_iterate_over_cross_sections.py  test_linspace_steps.py  test_pandas_unstack.py  test_readme_example.py  test_recombine_segmentation_index.py  test_segbycat_and_slk.py  test_segbycat_and_slk_and_true.py  test_segment_by_categories_and_slk_discontinuities.py  test_segment_by_categories_and_slk_true_discontinuities.py  test_shs.py  test_split_rows_by_category_to_max_segment_length.py  test_split_rows_by_segmentation.py  test_split_rows_bycat.py
test/r_version/: stepping through r version.ipynb
test/util/: dummy_data.py
