[metadata]
name = segmenter
version = 0.5.0
author = Nicholas Archer
author_email = nicholas.archer@mainroads.wa.gov.au
description = Tools for segmenting a road network
long_description=file:readme.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/thehappycheese/segmenter

[options]
packages = find:
package_dir = 
    = src
install_requires =
    pandas
    deprecated
python_requires=>=3.9

[options.packages.find]
where = src

[options.extras_require]
dev=
    pytest

